Summary of changes between versions 0.9.5 and 0.9.6
---------------------------------------------------

 - Support for per-target default security groups added.

 - Update to work on 2.6.19.x.

 - Updated to work with SCST 0.9.6.

 - Cleanups and minor bug fixes.

Summary of changes between versions 0.9.3.8 and 0.9.5
-----------------------------------------------------

 - Ported to 2.6.17.x and 2.6.18.

 - Problem with not found WWN on the first login attempt fixed.
 
 - Updated for the latest SCST interfaces changes.

 - Cleanups and minor bug fixes.


Summary of changes between versions 0.9.3.8 and 0.9.3.9
-------------------------------------------------------
Patch vs: qla2xxx v8.01.03-k (in kernels 2.6.15.x+, including 2.6.16-prex)

 - Fixed problem when "out-of-order frames rassembly" bit was wrongly set,
   which lead to only 1Gbps speed of 23xx cards.

 - Removed all code that deals with "use_sg == 0" data, since staring
   from SCST 0.9.5 commands data are always in SG-vector. 

 - Fixed hungup on the module unload.

 - Minor cleanups and fixes

Summary of changes between versions 0.9.3.7 and 0.9.3.8
-------------------------------------------------------
Patch vs: qla2xxx v8.01.03-k (in kernels 2.6.15.x+, including 2.6.16-prex)

 - Minor cleanups

Summary of changes between versions 0.9.3.6 and 0.9.3.7
-------------------------------------------------------
Patch vs: qla2xxx v8.01.03-k (in kernels 2.6.15.x+, including 2.6.16-prex)

 - Fix null pointer dereference in do_ctio_complete (thanks to Calvin Morrow)

Summary of changes between versions 0.9.3.5 and 0.9.3.6
-------------------------------------------------------
Patch vs: qla2xxx v8.01.03-k (in kernels 2.6.15.x+, including 2.6.16-prex)

 - Include MEMSET, MEMCPY definitions
	
 - Patched to compile on 64bit cleanly (thanks to Ming Zhang for patch)

- Fixed possible race during initial enabling of Target Mode (thanks to 
Mark Buechler for finding)
	